Fixed margin issues with footer jumping off right side of the page.

--- a/src/main/resources/static/stylesheets/formstylesheet.css
+++ b/src/main/resources/static/stylesheets/formstylesheet.css
@@ -257,3 +257,8 @@ footer a:hover {
 .footertitle {
     color: #000;
 }
+
+.footer-row {
+    margin-right: 0px;
+    margin-left: 0px;
+}
